--- a/angular-project-setup/src/app/app.component.html
+++ b/angular-project-setup/src/app/app.component.html
@@ -228,6 +228,11 @@
       <h1>Hello, {{ title }}</h1>
       <p>Congratulations! Your app is running. 🎉</p>
     </div>
+    <!--  -->
+    <div class="card flex justify-center">
+      <p-button label="Check" />
+  </div>
+    <!--  -->
     <div class="divider" role="separator" aria-label="Divider"></div>
     <div class="right-side">
       <div class="pill-group">
