--- a/data-binding-input-output/src/app/app.html
+++ b/data-binding-input-output/src/app/app.html
@@ -1,5 +1,9 @@
 <h1>{{welcomeTitle}}</h1>
 
+<input type="text" [(ngModel)]="fromInput">
+
+<p>i am from input field : {{fromInput}}</p>
+
 <app-input-output-dat-binding [fromParent]="parentData" (sendToParent)="fromChild($event)"></app-input-output-dat-binding>
 <p>{{childData}}</p>
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
